fixing: layout brokes

--- a/src/components/InvestimentoNew/index.css
+++ b/src/components/InvestimentoNew/index.css
@@ -37,7 +37,7 @@
 .investimento-new .investimento-flexSection .investimento-flexItem p {
   color: #656565;
   font-size: 18px;
-  margin-top: -20px;
+  margin-top: 0px;
 }
 
 .investimento-new .investimento-flexSection .investimento-flexItem p span {
